--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUBS_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}-Rebuild
+          tag_name: Rebuild-${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
